[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-ml"
version = "0.1.0"
description = "Machine-learning utilities for raythm chart datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "librosa>=0.10.2",
    "soundfile>=0.12",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
]

[project.scripts]
chart-ml = "chart_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
